# LibraryPlatform

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: code-quality.yml
migrations/: env.py
migrations/versions/: 016df85c3b60_init_tables.py  1d23dca24f0d_added_books_model_with_relationship.py  384fa55467a6_created_author_model.py  5046f32ee386_added_email_password_to_author.py  e8d8f35a0001_created_refresh_token_model.py
scripts/: migrate.sh
src/: database.py  logger.py  main.py  settings.py
src/auth/: dependencies.py  dto.py  exceptions.py  models.py  repositories.py  responses.py  router.py  schemas.py
src/auth/services/: __init__.py  auth.py  hasher.py  token.py
src/authors/: exceptions.py  models.py  repositories.py  responses.py  router.py  schemas.py  service.py
src/base/: dependencies.py  dto.py  exceptions.py  middleware.py  query_builder.py  repositories.py  schemas.py  services.py
src/base/mixins/: __init__.py  id.py  timestamp.py
src/books/: dto.py  enum.py  exceptions.py  models.py  repositories.py  responses.py  router.py  schemas.py  service.py
src/books/services/: __init__.py  book.py  importers.py
src/books/services/importers/: __init__.py  base.py  csv.py  json.py
tests/: conftest.py  test_utils.py
tests/integration/: test_final_api.py
tests/unit/: test_auth_services.py  test_authors_services.py  test_books_services.py  test_security.py
